stl-test/Tests/array_view/array_view/Negative/test3.cpp
//#error
#include <vector>
#include <array_view>
int main()
{
    std::vector<int> v(10);
    std::array_view<int, 2> av(v);
}
